--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <a href="positioning.html">positioning Activity</a>
         <a href="#">Personal Website</a>
         </nav>
+        <p>Victory Duru - WDD130</p>
 </body>
 </html>
