--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="logo_link"></a><img class="logo" src="logo.png" alt="Logo Here"></a>
+        <a href="index.html" id="logo_link"><img class="logo" src="images/logo.png" alt="Logo Here"></a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page2</a>
@@ -16,5 +16,56 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    <div>
+        <div id="hero-box">
+            <img src="images/hero.png" id="hero-img" alt="People enjoying rafting">
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class="button-box">
+                    <a href="rates.html" class="book">Book Now</a>
+                </div>
+            </section>
+        </div>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="images/rivers_icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="imaged/camping.jpg" alt="tent in mounta">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <section>
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+            <a class="join" href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 2022 - Victory Duru</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactuss.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
