--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-        <a href="aboutme/index.html">About Me Page</a>
-        <a href="wwr/index.html">Whit Water Rafting Siteplant</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplant</a>
-        <a href="positioning.html">positioning Activity</a>
+        <a href="./aboutme/index.html">About Me Page</a>
+        <a href="./wwr/index.html">Whit Water Rafting Siteplant</a>
+        <a href="./wwr/site-plan-rafting.html">White Water Rafting Siteplant</a>
+        <a href="./positioning.html">positioning Activity</a>
         <a href="#">Personal Website</a>
         </nav>
         <p>Victory Duru - WDD130</p>
