--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a href="index.html" id="logo_link"><img class="logo" src="images/logo.png" alt="Logo Here"></a>
         <nav>
@@ -35,7 +37,7 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="imaged/camping.jpg" alt="tent in mounta">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mounta">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
@@ -56,16 +58,17 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactuss.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
