--- a/wwr/index.html
+++ b/wwr/index.html
@@ -33,7 +33,7 @@
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/rivers_icon.png" alt="river icon">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
@@ -46,6 +46,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section>
             <h2>More Than Just The Thrill</h2>
