--- a/wwr/index.html
+++ b/wwr/index.html
@@ -58,7 +58,7 @@
         <p>Dry Oar &copy; 2022 - Victory Duru</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactuss.html">Contact Us</a></p>
-        <div class="social">
+        <div class="social img">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
