--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="content">
     <header>
-        <a href="index.html" id="logo_link"><img class="logo" src="images/logo.png" alt="Logo Here"></a>
+        <a id="logo_link" href="index.html" >
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page2</a>
@@ -18,9 +20,10 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <div>
+    <div id="hero">
         <div id="hero-box">
-            <img src="images/hero.png" id="hero-img" alt="People enjoying rafting">
+            <img src="images/hero.png" id="hero-img" alt="People enjoying white water rafting">
+            </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
